[package]
name = "farm"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "farm"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
metaplex-token-metadata = {version = "0.0.1", features = ["no-entrypoint"]}
